--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -6,6 +6,7 @@ deployment:
     - /bin/cp -R routes $DEPLOYPATH
     - /bin/cp -R resources $DEPLOYPATH
     - /bin/cp -R public $DEPLOYPATH
+    - /bin/cp -R config $DEPLOYPATH
     - /bin/cp .cpanel.yml $DEPLOYPATH
 
     
